--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "nodemon": "^1.18.9"
   },
   "dependencies": {
-    "dotenv": "^8.2.0"
+    "apollo-server": "^2.12.0",
+    "apollo-server-express": "^2.12.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "graphql": "^15.0.0"
   }
 }
