--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "prettier": "^2.0.5"
   },
   "dependencies": {
     "apollo-server": "^2.12.0",
     "apollo-server-express": "^2.12.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.0.0"
